--- a/ejs-views/contacts.ejs
+++ b/ejs-views/contacts.ejs
@@ -11,11 +11,6 @@
 </head>
 <body>
 <h1>Contacts</h1>
-<ul>
-   <li><a href="/">Home</a></li>
-   <li><a href="/posts">Posts</a></li>
-   <li><a href="/add-post">Add Post</a></li>
-   <li><a href="/contacts">Contacts</a></li>
-</ul>
+<%- include('./partials/nav.ejs')%>
 </body>
 </html>
