--- a/ejs-views/add-posts.ejs
+++ b/ejs-views/add-posts.ejs
@@ -5,12 +5,15 @@
     <title>Add</title>
 </head>
 <body>
-<form id="contact-form">
+<form id="contact-form" method="post" action="/add-posts">
     <label>Post Text
         <input type="text" name="author">
     </label>
     <label>Author
         <input type="text" name="author">
+    </label>
+    <label>Отправить
+        <input type="submit">
     </label>
 </form>
 </body>
