--- a/ejs-views/contacts.ejs
+++ b/ejs-views/contacts.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contacts</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         h1{
             color: #e14191;
