--- a/ejs-views/post.ejs
+++ b/ejs-views/post.ejs
@@ -6,5 +6,8 @@
 </head>
 <body>
 <h1>Post</h1>
+<h2><%= post.date || '' %></h2>
+<h2><%= post.author %></h2>
+<h2><%= post.text %></h2>
 </body>
 </html>
